# polkadot-learnearn

./: README.md  compose.dev.yml  compose.yml  opencode.json
api/: .env.example  Dockerfile  main.py  pyproject.toml
api/src/: config.py  database.py  models.py
api/src/ai/: factory.py  gemini.py  provider.py  subtitles.py
api/src/auth/: dependencies.py  exceptions.py  jwt.py  models.py  router.py  schemas.py  service.py  signature.py
api/src/course/: blockchain.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
api/src/platform/: wallet.py
api/src/x402/: __init__.py  middleware.py  polkadot_scheme.py  types.py
backend/: Dockerfile  ai_agent.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server_simple.py
core/ABI/: PoolCourse.ts  PoolCourseFactory.ts  index.ts
core/smart-contract/: hardhat.config.js  package-lock.json  package.json
frontend/: PROJECT_STRUCTURE.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppProviders.tsx  ChatInterface.tsx  Icons.tsx  Layout.tsx  LessonList.tsx  Modal.tsx  SharedUI.tsx  VideoPlayer.tsx  WalletButton.tsx
frontend/constants/: index.ts  modules.ts
frontend/lib/: courses.ts  learningModules.ts  polkadot.ts
frontend/types/: course.ts  userRole.ts
web/: .env.example  package.json  pnpm-lock.yaml
web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/components/: description-renderer.tsx  features-section.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  (+6 more)
(+107 files in other folders)
